--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Addy Finn</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -20,13 +24,23 @@
 </header>
 
 <main>
+
+    <!-- ABOUT -->
     <section id="about">
-        <h2>About Me</h2>
-        <p>
-            Coming Soon.
-        </p>
+        <div class="about-container">
+            <div class="about-avatar">
+                <!-- Replace avatar.png with your generated PNG -->
+                <img src="avatar.png" alt="Avatar">
+            </div>
+
+            <div class="about-text">
+                <h2>About Me</h2>
+                <p>Coming Soon.</p>
+            </div>
+        </div>
     </section>
 
+    <!-- WORK -->
     <section id="work">
         <h2>My Work</h2>
 
@@ -48,6 +62,7 @@
         </div>
     </section>
 
+    <!-- BLOG -->
     <section id="blog">
         <h2>Blog</h2>
 
@@ -62,34 +77,32 @@
         </div>
     </section>
 
+    <!-- CONTACT -->
     <section id="contact">
         <h2>Contact</h2>
 
         <div class="contact-info">
-            <p>
-                💼 <strong>LinkedIn:</strong>
-                <a href="https://www.linkedin.com/in/adnangulzarbaba" target="_blank">
-                    adnangulzarbaba
-                </a>
-            </p>
+            <a href="https://www.linkedin.com/in/adnangulzarbaba" target="_blank">
+                <i class="fab fa-linkedin"></i>
+                LinkedIn
+            </a>
 
-            <p>
-                📸 <strong>Instagram:</strong>
-                <a href="https://www.instagram.com/addyfinn" target="_blank">
-                    addyfinn
-                </a>
-            </p>
+            <a href="https://www.instagram.com/addyfinn" target="_blank">
+                <i class="fab fa-instagram"></i>
+                Instagram
+            </a>
 
-            <p>
-                📧 <strong>Email:</strong>
-                <a href="mailto:addyfinn@outlook.com</">addyfinn@outlook.com</a>
-            </p>
+            <a href="mailto:addyfinn@outlook.com">
+                <i class="fas fa-envelope"></i>
+                addyfinn@outlook.com
+            </a>
         </div>
     </section>
+
 </main>
 
 <footer>
-    <p>© 2025 My Portfolio</p>
+    <p>© 2025 Addy Finn</p>
 </footer>
 
 <script src="script.js"></script>
