--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Addy Finn</title>
 
+    <!-- Favicon (Title Tab Logo) -->
+    <link rel="icon" type="image/png" href="icon.png">
+
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 
-    <!-- Font Awesome Icons -->
+    <!-- Font Awesome -->
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -29,13 +32,17 @@
     <section id="about">
         <div class="about-container">
             <div class="about-avatar">
-                <!-- Replace avatar.png with your generated PNG -->
                 <img src="avatar.png" alt="Avatar">
             </div>
 
             <div class="about-text">
-                <h2>About Me</h2>
-                <p>Coming Soon.</p>
+                <h2>Adnan Gulzar Baba</h2>
+                <p>
+                    Hi, I’m <strong>Addy</strong> — a <strong>Data Science & AI</strong> master's student focused on
+                    turning complex data into clean, usable insights.
+                    <br><br>
+                    I’m open to full-time or project-based remote roles where I can contribute to practical, data-driven solutions.
+                </p>
             </div>
         </div>
     </section>
@@ -43,18 +50,15 @@
     <!-- WORK -->
     <section id="work">
         <h2>My Work</h2>
-
         <div class="work-grid">
             <div class="card">
                 <h3>Project One</h3>
                 <p>Coming Soon.</p>
             </div>
-
             <div class="card">
                 <h3>Project Two</h3>
                 <p>Coming Soon.</p>
             </div>
-
             <div class="card">
                 <h3>Project Three</h3>
                 <p>Coming Soon.</p>
@@ -65,14 +69,12 @@
     <!-- BLOG -->
     <section id="blog">
         <h2>Blog</h2>
-
         <div class="card">
-            <h3>Blog 1</h3>
+            <h3>Thoughts & Notes 1</h3>
             <p>Coming Soon.</p>
         </div>
-
         <div class="card">
-            <h3>Blog 2</h3>
+            <h3>Thoughts & Notes 2</h3>
             <p>Coming Soon.</p>
         </div>
     </section>
@@ -80,21 +82,15 @@
     <!-- CONTACT -->
     <section id="contact">
         <h2>Contact</h2>
-
         <div class="contact-info">
             <a href="https://www.linkedin.com/in/adnangulzarbaba" target="_blank">
-                <i class="fab fa-linkedin"></i>
-                LinkedIn
+                <i class="fab fa-linkedin"></i> LinkedIn
             </a>
-
             <a href="https://www.instagram.com/addyfinn" target="_blank">
-                <i class="fab fa-instagram"></i>
-                Instagram
+                <i class="fab fa-instagram"></i> Instagram
             </a>
-
             <a href="mailto:addyfinn@outlook.com">
-                <i class="fas fa-envelope"></i>
-                addyfinn@outlook.com
+                <i class="fas fa-envelope"></i> addyfinn@outlook.com
             </a>
         </div>
     </section>
@@ -102,7 +98,7 @@
 </main>
 
 <footer>
-    <p>© 2025 Addy Finn</p>
+    © 2025 Addy Finn
 </footer>
 
 <script src="script.js"></script>
