--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@
 </main>
 
 <footer>
-    © 2025 Addy Finn
+    © 2025 Addy Finn. All Rights Reserved.
 </footer>
 
 <script src="script.js"></script>
 </body>
 </html>
+
