--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Addy Finn</title>
 
-    <!-- Favicon (Title Tab Logo) -->
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="icon.png">
 
     <!-- CSS -->
@@ -41,8 +41,22 @@
                     Hi, I’m <strong>Addy</strong> — a <strong>Data Science & AI</strong> master's student focused on
                     turning complex data into clean, usable insights.
                     <br><br>
-                    I’m open to full-time or project-based remote roles where I can contribute to practical, data-driven solutions.
+                    I’m open to full-time or project-based remote roles where I can contribute to practical,
+                    data-driven solutions.
                 </p>
+
+                <p class="tools">
+                    <strong>Tools:</strong>
+                    Python · SQL · Excel · Power BI · Jupyter Notebook · Pandas · NumPy ·
+                    Scikit-learn · Matplotlib · Seaborn · Streamlit · FastAPI
+                </p>
+
+                <div class="github-link">
+                    <a href="https://github.com/adnangulzarbaba" target="_blank" aria-label="GitHub">
+                        <i class="fab fa-github"></i>
+                        github.com/adnangulzarbaba
+                    </a>
+                </div>
             </div>
         </div>
     </section>
@@ -50,19 +64,49 @@
     <!-- WORK -->
     <section id="work">
         <h2>My Work</h2>
+
         <div class="work-grid">
+
+            <!-- Flipkart Project -->
             <div class="card">
-                <h3>Project One</h3>
-                <p>Coming Soon.</p>
+                <h3>Real Time PowerBI Flipkart Project</h3>
+
+                <p>
+                    A real-time data analytics project that extracts product data from Flipkart using web scraping,
+                    processes and analyzes the data in Excel, and visualizes key insights through an interactive
+                    Power BI dashboard. The project focuses on tracking pricing trends, ratings, and product
+                    availability to support data-driven decision making.
+                </p>
+
+                <p><strong>Tools:</strong> Python · Web Scraping · Excel · Power BI</p>
             </div>
+
+            <!-- FindBuyer -->
             <div class="card">
-                <h3>Project Two</h3>
-                <p>Coming Soon.</p>
+                <h3>FindBuyer – Automation Tool for Supplier–Buyer Matching</h3>
+
+                <p>
+                    FindBuyer is an AI-driven automation tool that helps suppliers identify potential buyers based on
+                    product details and market preferences. It uses intelligent matching to generate relevant buyer
+                    leads and support data-driven decision making.
+                </p>
+
+                <p><strong>Tools:</strong> Python · FastAPI · Web Scraping · Email Automation · SQL</p>
             </div>
+
+            <!-- Convo-Bot -->
             <div class="card">
-                <h3>Project Three</h3>
-                <p>Coming Soon.</p>
+                <h3>Convo-Bot: Voice-Enabled AI Chatbot</h3>
+
+                <p>
+                    Convo-Bot is a voice-enabled AI chatbot that enables natural human-computer interaction through
+                    speech. It uses speech recognition, NLP, and text-to-speech to understand user intent and respond
+                    in real time.
+                </p>
+
+                <p><strong>Tools:</strong> Python · NLP · Speech Recognition · Text-to-Speech · Streamlit</p>
             </div>
+
         </div>
     </section>
 
@@ -70,11 +114,7 @@
     <section id="blog">
         <h2>Blog</h2>
         <div class="card">
-            <h3>Thoughts & Notes 1</h3>
-            <p>Coming Soon.</p>
-        </div>
-        <div class="card">
-            <h3>Thoughts & Notes 2</h3>
+            <h3>Thoughts & Notes</h3>
             <p>Coming Soon.</p>
         </div>
     </section>
@@ -89,8 +129,8 @@
             <a href="https://www.instagram.com/addyfinn" target="_blank">
                 <i class="fab fa-instagram"></i> Instagram
             </a>
-            <a href="mailto:addyfinn@outlook.com">
-                <i class="fas fa-envelope"></i> addyfinn@outlook.com
+            <a href="mailto:adnangulzarbaba@gmail.com">
+                <i class="fas fa-envelope"></i> adnangulzarbaba@gmail.com
             </a>
         </div>
     </section>
@@ -104,4 +144,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
