--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="github-link">
                     <a href="https://github.com/adnangulzarbaba" target="_blank" aria-label="GitHub">
                         <i class="fab fa-github"></i>
-                        github.com/adnangulzarbaba
+                        GitHub
                     </a>
                 </div>
             </div>
@@ -144,3 +144,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
