--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
     <title>Addy Finn</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="icon.png">
+    <link rel="icon" href="icon.png" sizes="48x48" type="image/png">
+    <link rel="icon" href="icon.png" sizes="96x96" type="image/png">
+    <link rel="icon" href="icon.png" sizes="192x192" type="image/png">
+
+    <!-- OPEN GRAPH (SEARCH + SOCIAL) -->
+    <meta property="og:title" content="Addy Finn – Data Science & AI">
+    <meta property="og:description" content="Portfolio of Adnan Gulzar Baba (Addy), Data Science & AI specialist.">
+    <meta property="og:image" content="https://YOUR_DOMAIN/avatar.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://YOUR_DOMAIN">
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
@@ -148,3 +157,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
