--- a/index.html
+++ b/index.html
@@ -7,15 +7,12 @@
 
     <!-- Favicon -->
     <link rel="icon" href="icon.png" sizes="48x48" type="image/png">
-    <link rel="icon" href="icon.png" sizes="96x96" type="image/png">
-    <link rel="icon" href="icon.png" sizes="192x192" type="image/png">
 
-    <!-- OPEN GRAPH (SEARCH + SOCIAL) -->
+    <!-- Open Graph -->
     <meta property="og:title" content="Addy Finn – Data Science & AI">
-    <meta property="og:description" content="Portfolio of Adnan Gulzar Baba (Addy), Data Science & AI specialist.">
-    <meta property="og:image" content="https://YOUR_DOMAIN/avatar.png">
+    <meta property="og:description" content="Portfolio of Adnan Gulzar Baba – Data Science & AI Specialist">
+    <meta property="og:image" content="avatar.png">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://YOUR_DOMAIN">
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
@@ -37,116 +34,108 @@
 
 <main>
 
-    <!-- ABOUT -->
-    <section id="about">
-        <div class="about-container">
-            <div class="about-avatar">
-                <img src="avatar.png" alt="Avatar">
-            </div>
+<!-- ABOUT / HERO -->
+<section id="about">
+    <div class="about-container">
 
-            <div class="about-text">
-                <h2>Adnan Gulzar Baba</h2>
-                <p>
-                    Hi, I’m <strong>Addy</strong> — a <strong>Data Science & AI</strong> master's student focused on
-                    turning complex data into clean, usable insights.
-                    <br><br>
-                    I’m open to full-time or project-based remote roles where I can contribute to practical,
-                    data-driven solutions.
-                </p>
+        <div class="about-avatar">
+            <img src="avatar.png" alt="Avatar">
+        </div>
 
-                <p class="tools">
-                    <strong>Tools:</strong>
-                    Python · SQL · Excel · Power BI · Jupyter Notebook · Pandas · NumPy ·
-                    Scikit-learn · Matplotlib · Seaborn · Streamlit · FastAPI
-                </p>
+        <div class="about-text">
+            <h1 class="hero-name">Adnan Gulzar Baba</h1>
+            <h3 class="hero-title">Data Science & AI Engineer</h3>
 
-                <div class="github-link">
-                    <a href="https://github.com/adnangulzarbaba" target="_blank" aria-label="GitHub">
-                        <i class="fab fa-github"></i>
-                        GitHub
-                    </a>
-                    <a href="addy-resume.pdf" download class="resume-btn">
-                    <i class="fas fa-file-download"></i>
-                    Download Resume
-                    </a>
-                </div>
+            <p class="hero-desc">
+                Hi, I’m <strong>Addy</strong> — a data-driven problem solver focused on
+                building intelligent systems and turning complex data into meaningful insights.
+                <br><br>
+                Open to full-time or project-based <strong>remote roles</strong>.
+            </p>
+
+            <p class="tools">
+                <strong>Tools:</strong>
+                Python · SQL · Excel · Power BI · Pandas · NumPy ·
+                Scikit-learn · Matplotlib · Seaborn · Streamlit · FastAPI
+            </p>
+
+            <div class="github-link">
+                <a href="https://github.com/adnangulzarbaba" target="_blank">
+                    <i class="fab fa-github"></i> GitHub
+                </a>
+
+                <a href="addy-resume.pdf" download class="resume-btn">
+                    <i class="fas fa-file-download"></i> Download Resume
+                </a>
             </div>
         </div>
-    </section>
 
-    <!-- WORK -->
-    <section id="work">
-        <h2>My Work</h2>
+    </div>
+</section>
 
-        <div class="work-grid">
+<!-- WORK -->
+<section id="work">
+    <h2>My Work</h2>
 
-            <!-- Flipkart Project -->
-            <div class="card">
-                <h3>Real Time PowerBI Flipkart Project</h3>
+    <div class="work-grid">
 
-                <p>
-                    A real-time data analytics project that extracts product data from Flipkart using web scraping,
-                    processes and analyzes the data in Excel, and visualizes key insights through an interactive
-                    Power BI dashboard. The project focuses on tracking pricing trends, ratings, and product
-                    availability to support data-driven decision making.
-                </p>
-
-                <p><strong>Tools:</strong> Python · Web Scraping · Excel · Power BI</p>
-            </div>
-
-            <!-- FindBuyer -->
-            <div class="card">
-                <h3>FindBuyer – Automation Tool for Supplier–Buyer Matching</h3>
-
-                <p>
-                    FindBuyer is an AI-driven automation tool that helps suppliers identify potential buyers based on
-                    product details and market preferences. It uses intelligent matching to generate relevant buyer
-                    leads and support data-driven decision making.
-                </p>
-
-                <p><strong>Tools:</strong> Python · FastAPI · Web Scraping · Email Automation · SQL</p>
-            </div>
-
-            <!-- Convo-Bot -->
-            <div class="card">
-                <h3>Convo-Bot: Voice-Enabled AI Chatbot</h3>
-
-                <p>
-                    Convo-Bot is a voice-enabled AI chatbot that enables natural human-computer interaction through
-                    speech. It uses speech recognition, NLP, and text-to-speech to understand user intent and respond
-                    in real time.
-                </p>
-
-                <p><strong>Tools:</strong> Python · NLP · Speech Recognition · Text-to-Speech · Streamlit</p>
-            </div>
-
-        </div>
-    </section>
-
-    <!-- BLOG -->
-    <section id="blog">
-        <h2>Blog</h2>
         <div class="card">
-            <h3>Thoughts & Notes</h3>
-            <p>Coming Soon.</p>
+            <h3>Real-Time Flipkart Power BI Analytics</h3>
+            <p>
+                Extracted live product data using web scraping, analyzed trends in Excel,
+                and visualized insights through an interactive Power BI dashboard.
+            </p>
+            <p><strong>Tools:</strong> Python · Web Scraping · Excel · Power BI</p>
         </div>
-    </section>
 
-    <!-- CONTACT -->
-    <section id="contact">
-        <h2>Contact</h2>
-        <div class="contact-info">
-            <a href="https://www.linkedin.com/in/adnangulzarbaba" target="_blank">
-                <i class="fab fa-linkedin"></i> LinkedIn
-            </a>
-            <a href="https://www.instagram.com/addyfinn" target="_blank">
-                <i class="fab fa-instagram"></i> Instagram
-            </a>
-            <a href="mailto:adnangulzarbaba@gmail.com">
-                <i class="fas fa-envelope"></i> adnangulzarbaba@gmail.com
-            </a>
+        <div class="card">
+            <h3>FindBuyer – Supplier–Buyer Matching Tool</h3>
+            <p>
+                AI-powered automation tool that identifies potential buyers using
+                intelligent matching and automated outreach.
+            </p>
+            <p><strong>Tools:</strong> Python · FastAPI · SQL · Web Scraping · Email Automation</p>
         </div>
-    </section>
+
+        <div class="card">
+            <h3>Convo-Bot – Voice Enabled AI Chatbot</h3>
+            <p>
+                Voice-based chatbot using NLP, speech recognition,
+                and real-time text-to-speech responses.
+            </p>
+            <p><strong>Tools:</strong> Python · NLP · Speech Recognition · Streamlit</p>
+        </div>
+
+    </div>
+</section>
+
+<!-- BLOG -->
+<section id="blog">
+    <h2>Blog</h2>
+    <div class="card">
+        <h3>Thoughts & Notes</h3>
+        <p>Coming soon.</p>
+    </div>
+</section>
+
+<!-- CONTACT -->
+<section id="contact">
+    <h2>Contact</h2>
+
+    <div class="contact-info">
+        <a href="https://www.linkedin.com/in/adnangulzarbaba" target="_blank">
+            <i class="fab fa-linkedin"></i> LinkedIn
+        </a>
+
+        <a href="https://www.instagram.com/addyfinn" target="_blank">
+            <i class="fab fa-instagram"></i> Instagram
+        </a>
+
+        <a href="mailto:adnangulzarbaba@gmail.com">
+            <i class="fas fa-envelope"></i> adnangulzarbaba@gmail.com
+        </a>
+    </div>
+</section>
 
 </main>
 
@@ -157,5 +146,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
-
