--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="work-grid">
 
         <div class="card">
-            <h3>Real-Time Flipkart Power BI Analytics</h3>
+            <h3>Real-Time Ecommerce Book Store Power BI Analytics</h3>
             <p>
                 Extracted live product data using web scraping, analyzed trends in Excel,
                 and visualized insights through an interactive Power BI dashboard.
@@ -146,3 +146,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
